// Vitest Snapshot v1

exports[`BackTop > BackTop baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="button-group"
    data-v-33e4f6e7=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-33e4f6e7=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        圆形返回顶部
      </span>
      <!---->
    </button>
  </div>
  <div
    data-v-33e4f6e7=""
  >
    <div
      class="t-back-top t-back-top--fixed t-back-top--round"
      data-v-33e4f6e7=""
      style="display: none;"
    >
      <svg
        class="t-icon t-icon-backtop"
        fill="none"
        height="1em"
        style="font-size: 22px;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <span
        class="t-back-top__text--round"
        style="min-width: 12px; max-width: 20px; width: auto; display: inline-block;"
      >
        顶部
      </span>
    </div>
  </div>
  
</div>
`;

exports[`BackTop > BackTop halfRoundVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="button-group"
    data-v-924378ec=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-924378ec=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        半圆形返回顶部
      </span>
      <!---->
    </button>
  </div>
  <div
    data-v-924378ec=""
  >
    <div
      class="t-back-top t-back-top--fixed t-back-top--half-round"
      data-v-924378ec=""
      style="display: none;"
    >
      <svg
        class="t-icon t-icon-backtop"
        fill="none"
        height="1em"
        style="font-size: 22px;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <span
        class="t-back-top__text--half-round"
        style="min-width: 12px; max-width: 20px; width: auto; display: inline-block;"
      >
        返回顶部
      </span>
    </div>
  </div>
  
</div>
`;

exports[`BackTop > BackTop mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-806aae90=""
  style="background-color: rgb(255, 255, 255);"
>
  <h1
    class="title"
    data-v-806aae90=""
  >
    BackTop 回到顶部
  </h1>
  <p
    class="summary"
    data-v-806aae90=""
  >
    当页面过长往下滑动是会出现返回顶部的便捷操作，帮助用户快速回到页面顶部
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-806aae90=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        圆型返回顶部
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="button-group"
        data-v-33e4f6e7=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-33e4f6e7=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            圆形返回顶部
          </span>
          <!---->
        </button>
      </div>
      <div
        data-v-33e4f6e7=""
      >
        <div
          class="t-back-top t-back-top--fixed t-back-top--round"
          data-v-33e4f6e7=""
          style="display: none;"
        >
          <svg
            class="t-icon t-icon-backtop"
            fill="none"
            height="1em"
            style="font-size: 22px;"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-back-top__text--round"
            style="min-width: 12px; max-width: 20px; width: auto; display: inline-block;"
          >
            顶部
          </span>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-806aae90=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        半圆型返回顶部
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="button-group"
        data-v-924378ec=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-924378ec=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            半圆形返回顶部
          </span>
          <!---->
        </button>
      </div>
      <div
        data-v-924378ec=""
      >
        <div
          class="t-back-top t-back-top--fixed t-back-top--half-round"
          data-v-924378ec=""
          style="display: none;"
        >
          <svg
            class="t-icon t-icon-backtop"
            fill="none"
            height="1em"
            style="font-size: 22px;"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-back-top__text--half-round"
            style="min-width: 12px; max-width: 20px; width: auto; display: inline-block;"
          >
            返回顶部
          </span>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-806aae90=""
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="group"
        data-v-806aae90=""
      >
        
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            />
            
          </div>
          
        </div>
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            />
            
          </div>
          
        </div>
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            />
            
          </div>
          
        </div>
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            />
            
          </div>
          
        </div>
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            />
            
          </div>
          
        </div>
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            />
            
          </div>
          
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="blank"
    data-v-806aae90=""
  />
</div>
`;
